--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/kalum_2022_test?useSSL=false&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=True
+spring.datasource.url=jdbc:mysql://localhost:3306/kalum_2022_test?allowPublicKeyRetrieval=True&useSSL=false&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=kalum_test
 spring.datasource.password=K@lum2022
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+edu.kalum.core.configuration.page.size=2
+edu.kalum.core.configuration.app.user = kalum-app
+edu.kalum.core.configuration.app.password = 12345
+edu.kalum.core.configuration.api.key = 3d6e66b2-1255-4193-ab1b-2fd24f285c46
+
 server.port=9000
-
-
-
-
-
 
